FIX: Jump direct to a specific page

--- a/web/css/jroller.css
+++ b/web/css/jroller.css
@@ -24,29 +24,46 @@ html { overflow: -moz-scrollbars-vertical !important; }
 
 img.responsive {
   display: block;
+  width: 100%;
   max-width: 100%;
   height: auto;
 }
 
 .media-row {
+  display: -webkit-flex;
   display: flex;
+
+  -webkit-flex-wrap: wrap;;
   flex-wrap: wrap;
-  align-items: flex-end;
 }
 
 .media-row .media-box {
-  width: 25%;
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-flex: 0 25%;
+  flex: 0 25%;
+
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 5px;
 }
 
-.media-row .media-box .media-box-inner:hover {
-  background-color: #dddddd;
-}
-
 .media-row .media-box .media-box-inner {
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-align-items: flex-end;
+  align-items: flex-end;
+
   background-color: #eeeeee;
   padding: 10px;
+  width: 100%;
+}
+
+.media-row .media-box .media-box-inner:hover {
+  background-color: #dddddd;
 }
 
 .floatleft { float: left; }
@@ -152,7 +169,8 @@ img.responsive {
     #sf_admin_pager .sf_admin_pagination td { width: auto; white-space: nowrap; padding: 0 10px; }
     #sf_admin_pager .sf_admin_pagination td.button { width: 30px; padding: 0; }
       #sf_admin_pager .sf_admin_pagination td a { display: block; width: 18px; height: 18px; margin: 0 auto; }
-      #sf_admin_pager .sf_admin_pagination td input { border: 1px solid #bbb; padding: 2px 0; text-align: center; }
+      #sf_admin_pager .sf_admin_pagination td input { border: 1px solid #bbb; padding: 2px 0; text-align: center; width: auto; }
+      #sf_admin_pager .sf_admin_pagination td form { display: inline-block; }
 
 /* list select menu */
 .sf_admin_batch_actions_choice .ui-selectmenu { float: left; margin-right: 5px; }
